--- a/app/src/main/res/layout/controller_home.xml
+++ b/app/src/main/res/layout/controller_home.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,13 +13,73 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_scrollFlags="scroll"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title="@string/title_currency_exchange"/>
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="1dp"
+                card_view:cardElevation="5dp"
+                card_view:cardUseCompatPadding="true">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/klein_blue_80"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/label_payment_fee_total"
+                        style="@style/Body1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/label_total_payment_fee"/>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/payment_fee_recycler_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/label_payment_fee_total"
+                        tools:itemCount="3"
+                        tools:listitem="@layout/widget_currency_item"/>
+
+                    <TextView
+                        android:id="@+id/label_balance"
+                        style="@style/Body1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="@string/label_current_balance"
+                        app:layout_constraintTop_toBottomOf="@id/payment_fee_recycler_view"/>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/balance_recycler_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/label_balance"
+                        tools:itemCount="3"
+                        tools:listitem="@layout/widget_currency_item"/>
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.v7.widget.CardView>
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--app:layout_scrollFlags="scroll"-->
+            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+            <!--app:title="@string/title_currency_exchange"/>-->
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -32,50 +93,35 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.constraint.ConstraintLayout
+
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                card_view:cardCornerRadius="1dp"
+                card_view:cardElevation="5dp"
+                card_view:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#fff"
+                android:padding="20dp">
 
                 <TextView
-                    android:id="@+id/label_payment_fee_total"
-                    android:layout_width="wrap_content"
+                    style="@style/Body1"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/label_total_payment_fee"/>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/payment_fee_recycler_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/label_payment_fee_total"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/widget_currency_item"/>
-
-                <TextView
-                    android:id="@+id/label_balance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/label_current_balance"
-                    app:layout_constraintTop_toBottomOf="@id/payment_fee_recycler_view"/>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/balance_recycler_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/label_balance"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/widget_currency_item"/>
+                    android:text="@string/title_currency_exchange"/>
 
                 <LinearLayout
-                    android:id="@+id/form"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintTop_toBottomOf="@id/balance_recycler_view">
+                    android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/from_amount"
@@ -85,24 +131,23 @@
                         android:inputType="numberDecimal"
                         android:maxLines="1"/>
 
-
                     <Spinner
                         android:id="@+id/from_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.2"/>
+                        android:layout_weight="0.1"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:src="@drawable/ic_arrow_right_black"/>
 
                     <Spinner
                         android:id="@+id/to_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.2"/>
+                        android:layout_weight="0.1"/>
                 </LinearLayout>
 
                 <TextView
@@ -110,26 +155,20 @@
                     style="@style/Caption"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:gravity="center"
-                    app:layout_constraintTop_toBottomOf="@id/form"/>
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"/>
 
                 <Button
                     android:id="@+id/convert"
                     style="@style/PrimaryButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="20dp"
                     android:enabled="false"
-                    android:text="@string/button_convert"
-                    app:layout_constraintTop_toBottomOf="@id/message"/>
-            </android.support.constraint.ConstraintLayout>
+                    android:text="@string/button_convert"/>
+            </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/historyRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
