--- a/app/src/main/res/layout/widget_currency_item.xml
+++ b/app/src/main/res/layout/widget_currency_item.xml
@@ -9,12 +9,14 @@
 
     <TextView
         android:id="@+id/amount"
+        style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="200"/>
 
     <TextView
         android:id="@+id/currency"
+        style="@style/Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
