--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/textNormal</item>
     </style>
 
     <style name="H1">
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">42sp</item>
     </style>
 
     <style name="PrimaryButton" parent="Button">
-        <!--<item name="android:background">@color/colorPrimary</item>-->
+        <item name="android:background">@drawable/selector_button_primary</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
@@ -23,13 +24,24 @@
     </style>
 
     <style name="Caption">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/textCaption</item>
+        <item name="android:fontFamily">@font/opensans_italic</item>
     </style>
 
     <style name="SpinnerItem" parent="Base.TextAppearance.AppCompat.Widget.TextView.SpinnerItem">
         <item name="android:padding">4dp</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
+    </style>
+
+    <style name="Body1" parent="Base.TextAppearance.AppCompat.Body1">
+        <item name="android:fontFamily">@font/opensans_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Body2" parent="Body1">
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
